# StrassenAlgorithm

./: CMakeLists.txt  run.sh  test.sh
main/: CMakeLists.txt
main/src/: main.cpp
strassen/: CMakeLists.txt
strassen/inc/: matrix.h  strassen.h
strassen/src/: matrix.cc  strassen.cc
test/: CMakeLists.txt
test/src/: matrix_test.cc  strassen_test.cc
